# ansel

./: .gitignore  PRD.md  README.md  TASKS.md  config.toml  pyproject.toml
src/ansel/: __init__.py  cli.py  config.py  db.py  photos.py  review.py
tests/: test_config.py  test_db.py  test_review.py
