[project]
name = "ansel"
version = "0.1.0"
description = "Incrementally caption and tag a macOS Photos library"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "osxphotos>=0.68",
    "photoscript>=0.4",
]

[project.scripts]
ansel = "ansel.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ansel"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
